# stockmarket

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
apps/backend/: Cargo.toml
apps/backend/src/: auth.rs  emulate.rs  emulator_handlers.rs  error.rs  main.rs  models.rs  proxy.rs  routes.rs  state.rs  stocks.json  stocks.rs
apps/flutter/lib/: bottom_nav.dart
apps/flutter/test/: widget_test.dart
apps/mobile/: pubspec.yaml
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/core/: constants.dart
apps/mobile/lib/models/: candle.dart  portfolio_history.dart  portfolio_summary.dart  position.dart  price_info.dart  stock.dart  trade.dart
apps/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: icons.d.ts  main.ts  router.ts
apps/web/src/components/: CountryPicker.ts  DashboardHeader.ts  DashboardSidebar.ts  LandingHeader.ts  LoginButton.ts  LoginForm.ts  Logo.ts  Navbar.ts  PortfolioChart.ts  PortfolioValueCard.ts  PositionsTable.ts  SearchInput.ts  Sidebar.ts  StockCard.ts  StockChartCard.ts  SummaryCard.ts  TradeForm.ts  TransactionHistory.ts  UserDropdown.ts  Watchlist.ts
apps/web/src/scss/: styles.scss  variables.scss
apps/web/src/services/: authService.ts  stockService.ts
apps/web/src/utils/: icons.ts
apps/web/src/views/: dashboard-new.scss  dashboard.ts  (+7 more)
docs/backend/: README.md  api-endpoints.md  state-management.md
docs/frontend/: README.md  data-flow.md  project-structure.md  routing.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bottom_nav.dart  main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
planning/: README.md  jira-import-script.ts  package.json  sprint-1-details.md  sprint-2-details.md  sprint-3-details.md  sprint-plan.md  tsconfig.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+17 files in other folders)
