[package]
name = "stockmarket-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["cors"] }
rand = "0.8"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
parking_lot = "0.12.3"
