[package]
name = "stockmarket-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
rand = "0.8.5"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
parking_lot = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
