[package]
name = "stockmarket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
reqwest = { version = "0.12.2", features = ["json", "stream", "rustls-tls"], default-features = false }
anyhow = "1.0.79"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dashmap = { version = "5.5.3", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http = "1.1.0"
headers = "0.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.35", features = ["serde"] }
rand = "0.8.5"
thiserror = "1.0.58"
async-trait = "0.1.79"
lazy_static = "1.4.0"
once_cell = "1.19.0"
dotenvy = "0.15.7"
